--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   path_provider: ^2.1.1
   image: ^4.1.4
   flutter_plugin_android_lifecycle: ^2.0.27
+  badges: ^3.1.2
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
