--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,9 @@ dependencies:
   flutter_plugin_android_lifecycle: ^2.0.27
   badges: ^3.1.2
   intl: ^0.20.2
+  firebase_messaging: ^15.2.5
+  flutter_local_notifications: ^19.0.0
+  supabase_flutter: ^2.8.4
 
 dev_dependencies:
   flutter_test:
